# TemperatureMetrics

./: .gitignore  .travis.yml  README.md
.github/workflows/: ci.yml  online-temp-metrics-agent.yml  online-temp-metrics-react-ui.yml
agent/online-temp-metrics/: .gitignore  CMakeLists.txt  README.md  conanfile.py  tasks.py
agent/online-temp-metrics/ci/: Dockerfile  do_cross_build.sh  env.sh  requirements.txt
agent/online-temp-metrics/include/: sensors.h  sht31_sensor.h
agent/online-temp-metrics/src/: main.cpp  sensors.cpp  sht31_sensor.c
agent/temp-metrics-d/: Cargo.toml
agent/temp-metrics-d-cpp/: README.md  meson.build  temp_metrics_d_cpp.c
agent/temp-metrics-d-cpp/include/: temp_metrics.hpp
agent/temp-metrics-d-cpp/src/: main.cpp
agent/temp-metrics-d-py/: .gitignore  README.md  main.py  mypy.ini  setup.py  tasks.py
agent/temp-metrics-d-py/ci/: mypy.ini  release.sh
agent/temp-metrics-d-py/conf/: aws_credentials.template.sh  conf.template.json
agent/temp-metrics-d-py/tempd/: agent.py
agent/temp-metrics-d-py/tempd/sensors/: dht11.py  fake.py  sht31.py  types.py
agent/temp-metrics-d-py/tempd/test/: test_agent.py
agent/temp-metrics-d-py/tempd/tests/: test_placeholder.py
agent/temp-metrics-d/src/: main.rs
deploy/k8s/: README.md
deploy/k8s/kube-prometheus/: .gitignore  Makefile  jsonnetfile.lock.json  main.jsonnet
deploy/k8s/kube-prometheus/scripts/: go.mod  go.sum  jsonnet-build.sh  tools.go
deploy/rpi/: README.md
infra/temp-metrics-infra/: README.md  cdk.json  package-lock.json  package.json
infra/temp-metrics-infra/lib/: temp-metrics-infra-stack.ts
infra/temp-metrics-infra/test/: temp-metrics-infra.test.ts
ui/online-temp-metrics-react-ui/: README.md  package-lock.json  package.json
ui/online-temp-metrics-react-ui/backend/: .gitignore  README.md  kk.py  mypy.ini  setup.py  tasks.py
ui/online-temp-metrics-react-ui/backend/metricsapp/: app.py
ui/online-temp-metrics-react-ui/frontend/: README.md  index.kk.tsx  package-lock.json  package.json
ui/online-temp-metrics-react-ui/frontend/public/: index.html
ui/online-temp-metrics-react-ui/frontend/src/: App.test.tsx  App.tsx  MetricSources.tsx  index.tsx  setupTests.ts
ui/online-temp-metrics-react-ui/src/: App.css  App.tsx  MetricSources.tsx
utils/: invoke.py
