[package]
name = "temp-metrics-d"
version = "0.1.0"
authors = ["Juan Rodriguez <juan.rodriguez.hortala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_cloudwatch = "0.45.0"
rusoto_logs = "0.45.0"
